tests/bad/example-e03.rat
fn Main () -> Void {
  let x = 0;
  x();
  return;
}
